[statistic] fix date filter visibility issue on small breakpoint screen size

--- a/app/ui-dev/src/css/responsive.sass
+++ b/app/ui-dev/src/css/responsive.sass
@@ -9,15 +9,18 @@
 
 @media(max-width: $breakpoint-sm-max)
   .date-filter
-    width: 95%
-    margin-bottom: 10px
-    margin-left: 15px
+    width: calc(100% - 10px) !important
+    margin-bottom: 15px
 
 @media(max-width: $breakpoint-md-min)
   .md-w99
     width: 99%
 
 @media(max-width: $breakpoint-sm-min)
+  .date-filter
+    width: calc(100% - 8px) !important
+    margin-left: 0 !important
+
   .save-btn
     padding-top: 0.6rem !important
     padding-bottom: 0.6rem !important
